dataset1235/2025-2/1153765216/users/2719941446/executions/3138746197_4190502342.log
== RUN (2025-08-21 18:40:09)
-- CODE: 
pritnt(180/4)

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
45.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    pritnt(180/4)
    ^^^^^^
NameError: name 'pritnt' is not defined. Did you mean: 'print'?
-- TEST CASE 2:
---- input:
x
---- correct output:
45.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    pritnt(180/4)
    ^^^^^^
NameError: name 'pritnt' is not defined. Did you mean: 'print'?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-21 18:40:06)
-- CODE: 
pritnt(180/4)

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
45.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    pritnt(180/4)
    ^^^^^^
NameError: name 'pritnt' is not defined. Did you mean: 'print'?
-- TEST CASE 2:
---- input:
x
---- correct output:
45.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    pritnt(180/4)
    ^^^^^^
NameError: name 'pritnt' is not defined. Did you mean: 'print'?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-21 18:40:15)
-- CODE: 
print(180/4)

-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
xx
---- correct output:
45.0
---- user output:
45.0
-- TEST CASE 2:
---- input:
x
---- correct output:
45.0
---- user output:
45.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-21 18:40:14)
-- CODE: 
print(180/4)

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
45.0
---- user output:
45.0
-- TEST CASE 2:
---- input:
x
---- correct output:
45.0
---- user output:
45.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
